# ESP32_HeartCheck_Project

./: .gitignore
ESP32_BLE_MESH/vendor_client/: sdkconfig  sdkconfig.old
ESP32_BLE_MESH/vendor_client/main/: board.c  main.c
ESP32_BLE_MESH/vendor_server/: sdkconfig  sdkconfig.old
ESP32_BLE_MESH/vendor_server/main/: CMakeLists.txt  WS2812.c  board.c  main.c
ESP32_BLE_MESH/vendor_server/main/WS2812/: WS2812.c  WS2812.h
ESP32_BLE_MESH/vendor_server/main/ble_mesh/: ble_mesh.c  ble_mesh.h
ESP32_NOW/data_record/: battery_test  data_anylaze.py  device_1_output.csv  device_1_temp.csv  device_2_output.csv  gui_test.py  output.xlsx  record_data.py  record_data.spec  record_data_csv.py  record_data_csv_gui.py  record_data_gui.py  record_data_gui.spec  record_data_udp.py  record_data_udp_mutilthread.py  record_data_udp_mutilthread_serial.py  requirement.txt  test1.xlsx  udp_test.py
ESP32_NOW/data_record/output_data/: device_10_output.csv  device_11_output.csv  device_12_output.csv  device_13_output.csv  device_14_output.csv  device_15_output.csv  device_16_output.csv  device_1_output.csv  device_2_output.csv  device_3_output.csv  device_4_output.csv  device_5_output.csv  device_6_output.csv  device_7_output.csv  device_8_output.csv  device_9_output.csv
ESP32_NOW/espnow_node/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32_NOW/espnow_node/main/: CMakeLists.txt  Kconfig.projbuild  board.c  espnow_example.h  espnow_example_main.c  main.c
ESP32_NOW/espnow_node/main/adc/: adc.c  adc.h
ESP32_NOW/espnow_node/main/adc_detect/: adc_common_config.h  continuous_detect.c  oneshot_detect.c
ESP32_NOW/espnow_node/main/battery_detect/: bat_adc.c  bat_adc.h
ESP32_NOW/espnow_node/main/esp_now/: esp_now_app.c  esp_now_app.h
ESP32_NOW/espnow_node/main/gpio/: gpio_func.c
ESP32_NOW/espnow_node/main/udp/: udp_server.c
ESP32_NOW/espnow_node/main/wifi/: wifi.c  wifi.h
ESP32_NOW/espnow_node/main/ws2812/: ws2812.c  ws2812.h
ESP32_NOW/espnow_station/: sdkconfig  sdkconfig.old
ESP32_NOW/espnow_station/main/: CMakeLists.txt  Kconfig.projbuild  espnow_example.h  espnow_example_main.c  event_group_config.h  idf_component.yml  main_init.c
ESP32_NOW/espnow_station/main/UDP/: udp_app.c  udp_app.h
ESP32_NOW/espnow_station/main/esp_now_app/: esp_now_app.c  esp_now_app.h  esp_now_config.h
ESP32_NOW/espnow_station/main/lcd/: lcd_hw.c  lcd_hw.h  lvgl_demo_ui.c
ESP32_NOW/espnow_station/main/lvgl_gui/: lvgl_gui.c  lvgl_gui.h
ESP32_NOW/espnow_station/main/smart_config/: smart_config.c  smart_config.h
ESP32_NOW/espnow_station/main/wifi_config/: wifi_config.c  wifi_config.h  wifi_provision.c  wifi_provision.h
